--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   align-Items: center;
   font-family: 'Nunito', sans-serif;
   /* border: 1px black solid; */
-  background-color:black;
+  background-color:lightblue;
   /* background: rgba(95, 158, 160, 0.4); */
 }
 
