--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,14 +4,10 @@
     font-size: 1.2rem;
     text-align: center;
     /* margin: auto; */
-    min-width: 40rem; 
+    /* min-width: 40rem;  */
     border: 3px burlywood solid;
     border-radius: 2%;
 } 
-
-/* .header-position-position{
-
-} */
 
 .header-position-about{
 font-size: 1.1rem;
