--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -1,6 +1,8 @@
 #mapid { 
-  width: 40rem;
-  height: 20rem;
+  width: 100%;
+  height: 40%;
+  /* width: 40rem;
+  height: 20rem; */
     border: 3px burlywood solid;
     border-radius: 1%;
     margin-top: 0.5rem; 
