--- a/src/components/Country.css
+++ b/src/components/Country.css
@@ -1,20 +1,18 @@
 .header-position {
-    display: flex;
-    flex-direction: column;
-    font-size: 1.2rem;
+    /* display: flex; */
+    /* flex-direction: column; */
+    width: 100%;
+    /* font-size: 1.2rem; */
     text-align: center;
     /* margin: auto; */
     /* min-width: 40rem;  */
     border: 3px burlywood solid;
     border-radius: 2%;
 } 
-
+/* 
 .header-position-about{
 font-size: 1.1rem;
 line-height: 2.5rem;
 margin-top: 2.0rem;
-}
+} */
 
-ul{
-    list-style: none;
-}
