--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -1,9 +1,9 @@
 #mapid { 
-  width: 100%;
-  height: 40%;
+  width: 100% ;
+  height: 40% ;
   /* width: 40rem;
   height: 20rem; */
-    border: 3px burlywood solid;
+    border: 2px rgb(241, 241, 243) solid;
     border-radius: 1%;
     margin-top: 0.5rem; 
   }
