--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,56 @@
-ul{
-  list-style: none;
+@import "./normalize.css";
+
+
+*{
+  font-family: 'Nunito', sans-serif;
+  color: black;
+  --font-size-h1: 1.5rem;
+  --font-size-h3:1.2rem;
+  --font-size-p: 0.9rem;
 }
 
-li{line-height: 1.5rem;}
-
 .App {
-  background-image: url("./assets/XT205511.JPG");
+  display: flex;
+  flex-direction: column;
+  justify-Content: space-around;
+  align-items: center;
+
+  background-image: url("./assets/singapore_medium.JPG");
   background-position: center;
   background-repeat: no-repeat;
   background-size:cover;
-  display: flex;
-  justify-Content: center;
-  align-items: center;
-  align-content: center;
-  font-family: 'Nunito', sans-serif;
-  background-color:lightblue;
+  }
+
+@media screen and (min-width: 320px) and (max-width:480px){
+  :root {
+    font-size: 10px;
+  }
+  .App {
+    background-image: url("./assets/singapore_small.JPG");
+    }
 }
 
-#wrapper {
-  height: 80%;
+@media screen and (min-width: 481px) and (max-width: 768px){
+  :root {
+    font-size: 14px;
+  }
 }
 
+@media screen and (min-width: 769px) and (max-width:1024px){
+
+}
+
+@media screen and (min-width: 1500px) and (max-width: 2000px){
+  :root {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 2001px) {
+  :root {
+    font-size: 23px;
+  }
+  .App {
+    background-image: url("./assets/singapore_large.JPG");
+    }
+}
