--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,46 @@
-@import "./normalize.css";
+@import './normalize.css';
 
-
-*{
+* {
   font-family: 'Nunito', sans-serif;
   color: black;
   --font-size-h1: 1.5rem;
-  --font-size-h3:1.2rem;
+  --font-size-h3: 1.2rem;
   --font-size-p: 0.9rem;
 }
 
 .App {
   display: flex;
   flex-direction: column;
-  justify-Content: space-around;
+  justify-content: space-around;
   align-items: center;
 
-  background-image: url("./assets/singapore_medium.JPG");
+  background-image: url('./assets/singapore_medium.JPG');
   background-position: center;
   background-repeat: no-repeat;
-  background-size:cover;
-  }
+  background-size: cover;
+}
 
-@media screen and (min-width: 320px) and (max-width:480px){
+@media screen and (min-width: 320px) and (max-width: 480px) {
   :root {
     font-size: 10px;
   }
   .App {
-    background-image: url("./assets/singapore_small.JPG");
-    }
-}
-
-@media screen and (min-width: 481px) and (max-width: 768px){
-  :root {
-    font-size: 14px;
+    background-image: url('./assets/singapore_small.JPG');
   }
 }
 
-@media screen and (min-width: 769px) and (max-width:1024px){
-
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  :root {
+    font-size: 13px;
+  }
 }
 
-@media screen and (min-width: 1500px) and (max-width: 2000px){
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+}
+
+@media screen and (min-width: 1500px) and (max-width: 2000px) {
   :root {
-    font-size: 18px;
+    font-size: 17px;
   }
 }
 
@@ -51,6 +49,6 @@
     font-size: 23px;
   }
   .App {
-    background-image: url("./assets/singapore_large.JPG");
-    }
+    background-image: url('./assets/singapore_large.JPG');
+  }
 }
