--- a/src/components/InfoWindow.css
+++ b/src/components/InfoWindow.css
@@ -1,56 +1,52 @@
-@import "../App.css";
+@import '../App.css';
 
-h1{
-    font-size: var(--font-size-h1);
-    font-weight:bold;
+h1 {
+  font-size: var(--font-size-h1);
+  font-weight: bold;
 }
-h3{
-    font-size: var(--font-size-h3);
-}
-
-p, span{
-    font-size: var(--font-size-p)
+h3 {
+  font-size: var(--font-size-h3);
 }
 
-span{
-    font-style: italic;
-    color: rgb(231, 111, 31);
+p,
+span {
+  font-size: var(--font-size-p);
 }
 
-
-.infoWindow-wrapper{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(184, 204, 206, 0.536);
-    padding: 1rem;
+span {
+  font-style: italic;
+  color: rgb(231, 111, 31);
 }
 
-.countryFlag{
-    width: 3rem;
+.infoWindow-wrapper {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(184, 204, 206, 0.536);
+  padding: 1rem;
+  line-height: 2rem;
 }
 
+.countryFlag {
+  width: 3rem;
+}
 
-@media screen and (min-width: 320px) and (max-width:480px){
-    .infoWindow-wrapper{
-        width: 70%;
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .infoWindow-wrapper {
+    width: 70%;
   }
 }
 
-@media screen and (min-width: 481px) and (max-width: 768px){
-    .infoWindow-wrapper{
-        width: 70%;
-    }
-    
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .infoWindow-wrapper {
+    width: 70%;
   }
-  @media screen and (min-width: 769px) and (max-width:1024px){
-  
-  }
-  @media screen and (min-width: 1025px) and (max-width: 1200px){
-  
-  }
-  @media screen and (min-width: 1201px) {
-
-  }
+}
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+}
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+}
+@media screen and (min-width: 1201px) {
+}
