--- a/src/App.css
+++ b/src/App.css
@@ -37,11 +37,14 @@
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
+  :root {
+    font-size: 14px;
+  }
 }
 
 @media screen and (min-width: 1500px) and (max-width: 2000px) {
   :root {
-    font-size: 17px;
+    font-size: 15px;
   }
 }
 
