--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,57 @@
 * {
-  font-family: 'Nunito', sans-serif;
+  /* font-family: 'Nunito', sans-serif;
   color: black;
   --font-size-h1: 1.5rem;
   --font-size-h3: 1.2rem;
-  --font-size-p: 0.9rem;
+  --font-size-p: 0.9rem; */
   margin: 0;
+  padding: 0;
 }
 
 .App {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
-
+  align-items: center; */
+  /* 
   background-image: url('./assets/singapore_medium.JPG');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
-  :root {
+  /* :root {
     font-size: 10px;
-  }
-  .App {
+  } */
+  /* .App {
     background-image: url('./assets/singapore_small.JPG');
-  }
+  } */
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
-  :root {
+  /* :root {
     font-size: 13px;
-  }
+  } */
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
-  :root {
+  /* :root {
     font-size: 14px;
-  }
+  } */
 }
 
 @media screen and (min-width: 1500px) and (max-width: 2000px) {
-  :root {
+  /* :root {
     font-size: 15px;
-  }
+  } */
 }
 
 @media screen and (min-width: 2001px) {
-  :root {
+  /* :root {
     font-size: 23px;
-  }
-  .App {
+  } */
+  /* .App {
     background-image: url('./assets/singapore_large.JPG');
-  }
+  } */
 }
